--- a/index.html
+++ b/index.html
@@ -11,21 +11,30 @@
 <body>
 
   <!-- costruisco la navbar -->
-  <nav class="bartop blue">
+  <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">start bootstrap</a>
+          </div>
 
-    <!-- all'interno due colonne da 6 -->
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 bd white">
-          start bootstrap
-        </div>
-        <div class="col-md-6 bd white">
-          link link link
-        </div>
-      </div>
-    </div>
-  </nav>
-  <!-- navbar -->
+          <div id="navbar" class="navbar-collapse collapse">
+
+            <ul class="nav navbar-nav navbar-right">
+              <!-- <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li> -->
+              <li><a href="../navbar-static-top/">link</a></li>
+              <li><a href="../navbar-fixed-top/">link</a></li>
+              <li><a href="../navbar-fixed-top/">link</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+      </nav>
+      <!--/ navbar -->
 
   <!-- costruisco header -->
 
