modificato il responsive header

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-offset-3 col-md-6 col-md-offset-3 bd">
+        <div class="col-md-offset-3 col-md-6 col-md-offset-3 col-sm-offset-2 col-sm-8  bd">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
       </div>
@@ -144,17 +144,17 @@
             <form>
               <div class="form-group">
 
-                  <input type="text" class="form-control" id="formGroupExampleInput" placeholder="name">
+                  <input type="text" class="form-control" id="formGroup1" placeholder="name">
               </div>
 
               <div class="form-group">
 
-                  <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="email address">
+                  <input type="email" class="form-control" id="formGroup2" placeholder="email address">
               </div>
 
               <div class="form-group">
 
-                  <input type="number" class="form-control" id="formGroupExampleInput2" placeholder="phone number">
+                  <input type="number" class="form-control" id="formGroup3" placeholder="phone number">
               </div>
 
               <div class="form-group">
@@ -199,25 +199,6 @@
         copyright ecc ecc
     </div>
   </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </body>
 </html>
