prima section main

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
         <!--/ navbar -->
 
-        <div class="container mrg-t55">
+        <div class="container-fluid mrg-t55">
 
             <div class="center txt-c">
               <!-- qui dentro abbiamo un img+ h1+logo e p-->
@@ -58,172 +58,189 @@
 
           </div>
 
+        </header>
+        <!-- /header -->
 
+        <!-- costruisco il main -->
+        <main>
 
+          <!-- abbiamo un titolo h2 come intestazione -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  </header>
-  <!-- /header -->
-
-  <!-- costruisco il main -->
-  <main>
-
-    <!-- abbiamo un titolo h2 come intestazione -->
-
-    <div class="title txt-c pd-top20">
-      <h2>portfolio</h2>
-    </div>
-    <!-- abbiamo poi un container con 3 colonne  -->
-    <section class="icon bd">
-
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4  col-sm-6 bd">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <div class="title txt-c pd-top20">
+            <h2 class="text-col">portfolio</h2>
           </div>
-          <div class="col-md-4  col-sm-6 bd">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </div>
-          <div class="col-md-4  col-sm-6 bd">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <div class="divider txt-c">
+            <div class="square2"></div>
+            <i class="text-col fas fa-star"></i>
+            <div class="square2"></div>
+
           </div>
 
-          <div class="col-md-4  col-sm-6 bd">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </div>
-          <div class="col-md-4  col-sm-6 bd">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </div>
-          <div class="col-md-4  col-sm-6 bd">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </div>
+          <!-- abbiamo poi un container con 3 colonne  -->
+          <section class="icon mrg-20">
 
-        </div>
-      </div>
+            <div class="container">
+
+              <div class="row">
+
+                <div class="col-md-4  col-sm-6 ">
+                  <!-- inserisco  img  -->
+                  <div class="slide">
+                    <img class="piccola bdr" src="img/cabin.png" alt="">
+
+                  </div>
+
+                </div>
+
+                <div class="col-md-4 col-sm-6 ">
+                  <div class="slide">
+                    <img class="piccola bdr" src="img/cake.png" alt="">
+
+                  </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6 ">
+                  <div class="slide txt-c">
+                    <img class="piccola bdr" src="img/circus.png" alt="">
+                  </div>
+                </div>
 
 
+                <div class="col-md-4  col-sm-6 ">
+                  <div class="slide txt-c">
+                    <img class="piccola bdr" src="img/game.png" alt="">
+                  </div>
 
+                </div>
 
+                <div class="col-md-4  col-sm-6 ">
+                  <div class="slide txt-c">
+                    <img class="piccola bdr" src="img/safe.png" alt="">
+                  </div>
 
+                </div>
 
-    </section>
-    <!-- fine section icon -->
+                <div class="col-md-4  col-sm-6 ">
+                  <div class="slide txt-c">
+                    <img class="piccola bdr" src="img/submarine.png" alt="">
+                  </div>
 
-    <!-- costruiamo la section about -->
+                </div>
 
-    <section class="about green txt-c">
-
-      <!-- all'interno sempre un h2 come titolo -->
-
-      <div class="title pd-top20">
-        <h2>about</h2>
-      </div>
-
-      <!-- insieme al titolo un container con 2 colonne -->
-
-      <div class="container">
-        <div class="row">
-          <div class="col-md-offset-1 col-md-5 bd col-sm-6">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </div>
-
-          <div class="col-md-5 bd col-sm-6">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </div>
-        </div>
-      </div>
-
-      <!-- in fondo abbiamo un bottone -->
-
-      <button type="button" class="btn btn-lg btn-success mrg-20">Download</button>
-
-    </section>
-    <!-- fine section about -->
-
-    <!-- terza section con h2 e form  -->
-
-    <section class="contact">
-
-      <div class="title pd-top20 txt-c">
-        <h2>contact me</h2>
-      </div>
-
-      <!-- per il form useremo il container con 1 colonna -->
-
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <form>
-              <div class="form-group">
-
-                  <input type="text" class="form-control" id="formGroup1" placeholder="name">
               </div>
 
-              <div class="form-group">
+            </div>
 
-                  <input type="email" class="form-control" id="formGroup2" placeholder="email address">
+          </section>
+
+
+
+
+
+          <!-- fine section icon -->
+
+          <!-- costruiamo la section about -->
+
+          <section class="about green txt-c">
+
+            <!-- all'interno sempre un h2 come titolo -->
+
+            <div class="title pd-top20">
+              <h2 class="white">about</h2>
+            </div>
+
+            <!-- insieme al titolo un container con 2 colonne -->
+
+            <div class="container">
+              <div class="row">
+                <div class="col-md-offset-1 col-md-5 bd col-sm-6">
+                  <p class="white">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+                </div>
+
+                <div class="col-md-5 bd col-sm-6">
+                  <p class="white">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- in fondo abbiamo un bottone -->
+
+            <button type="button" class="btn btn-lg btn-success mrg-20">Download</button>
+
+          </section>
+          <!-- fine section about -->
+
+          <!-- terza section con h2 e form  -->
+
+          <section class="contact">
+
+            <div class="title pd-top20 txt-c">
+              <h2>contact me</h2>
+            </div>
+
+            <!-- per il form useremo il container con 1 colonna -->
+
+            <div class="container">
+              <div class="row">
+                <div class="col-md-12">
+                  <form>
+                    <div class="form-group">
+
+                      <input type="text" class="form-control" id="formGroup1" placeholder="name">
+                    </div>
+
+                    <div class="form-group">
+
+                      <input type="email" class="form-control" id="formGroup2" placeholder="email address">
+                    </div>
+
+                    <div class="form-group">
+
+                      <input type="number" class="form-control" id="formGroup3" placeholder="phone number">
+                    </div>
+
+                    <div class="form-group">
+
+                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="6">message</textarea>
+                    </div>
+
+                    <button type="button" class="btn btn-success">send</button>
+
+
+                  </form>
+                </div>
+              </div>
+            </div>
+
+          </section>
+
+        </main>
+        <!-- fine del main -->
+
+        <!-- costruisco il footer con all'interno 3 colonne -->
+        <footer class="blue">
+
+          <div class="container">
+            <div class="row pd-top20 txt-c">
+              <div class="col-md-4 col-sm-4 white bd">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
               </div>
 
-              <div class="form-group">
-
-                  <input type="number" class="form-control" id="formGroup3" placeholder="phone number">
+              <div class="col-md-4 col-sm-4 white bd">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
               </div>
 
-              <div class="form-group">
-
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="6">message</textarea>
+              <div class="col-md-4 col-sm-4 white bd">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
               </div>
 
-              <button type="button" class="btn btn-success">send</button>
-
-
-            </form>
+            </div>
           </div>
-        </div>
-      </div>
 
-    </section>
+          <div class="end txt-c pd-top20">
+            copyright ecc ecc
+          </div>
+        </footer>
 
-  </main>
-    <!-- fine del main -->
-
-  <!-- costruisco il footer con all'interno 3 colonne -->
-  <footer class="blue">
-
-    <div class="container">
-      <div class="row pd-top20 txt-c">
-        <div class="col-md-4 col-sm-4 white bd">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>
-
-        <div class="col-md-4 col-sm-4 white bd">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>
-
-        <div class="col-md-4 col-sm-4 white bd">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>
-
-      </div>
-    </div>
-
-    <div class="end txt-c pd-top20">
-        copyright ecc ecc
-    </div>
-  </footer>
-
-</body>
-</html>
+      </body>
+      </html>
