seconda sezione del main

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
               <div class="row">
 
-                <div class="col-md-4  col-sm-6 ">
+                <div class="col-md-4 col-sm-6 ">
                   <!-- inserisco  img  -->
                   <div class="slide">
                     <img class="piccola bdr" src="img/cabin.png" alt="">
@@ -147,26 +147,33 @@
 
             <div class="title pd-top20">
               <h2 class="white">about</h2>
+
+            </div>
+            <div class="divider">
+              <div class="square"></div>
+              <i class="white fas fa-star"></i>
+              <div class="square"></div>
+
+
             </div>
 
             <!-- insieme al titolo un container con 2 colonne -->
 
-            <div class="container">
+            <div class="container mrgt30">
               <div class="row">
-                <div class="col-md-offset-1 col-md-5 bd col-sm-6">
-                  <p class="white">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+                <div class="col-md-offset-1 col-md-5 col-sm-6">
+                  <p class="white mr-l">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
                 </div>
 
-                <div class="col-md-5 bd col-sm-6">
-                  <p class="white">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+                <div class="col-md-5 col-sm-6">
+                  <p class="white mr-r">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
                 </div>
               </div>
             </div>
 
             <!-- in fondo abbiamo un bottone -->
 
-            <button type="button" class="btn btn-lg btn-success mrg-20">Download</button>
-
+            <button type="button" class=" white btn btn-default mrg-20 green"><i class="fas fa-download pd10"></i>Free Download</button>
           </section>
           <!-- fine section about -->
 
