sezione contact del main

--- a/index.html
+++ b/index.html
@@ -179,10 +179,16 @@
 
           <!-- terza section con h2 e form  -->
 
-          <section class="contact">
+          <section class="contact mrb-20">
 
             <div class="title pd-top20 txt-c">
               <h2>contact me</h2>
+            </div>
+            <div class="divider txt-c mrb-20">
+              <div class="square2"></div>
+              <i class="text-col fas fa-star"></i>
+              <div class="square2"></div>
+
             </div>
 
             <!-- per il form useremo il container con 1 colonna -->
