--- a/index.html
+++ b/index.html
@@ -234,24 +234,34 @@
         <footer class="blue">
 
           <div class="container">
-            <div class="row pd-top20 txt-c">
-              <div class="col-md-4 col-sm-4 white bd">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <div class="row pd-top20 txt-c pdb-50">
+              <div class="col-md-4 col-sm-4 white ">
+
+                <h4 class="sm-title">location</h4>
+                <p>2215 John Daniel Drive Clark, MO</p>
+                <p>54243</p>
               </div>
 
-              <div class="col-md-4 col-sm-4 white bd">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <div class="col-md-4 col-sm-4 white ">
+                <h4 class="sm-title">around the web</h4>
+                <i class="fab fa-facebook-f white"></i>
+                <i class="fab fa-google-plus-g white"></i>
+                <i class="fab fa-twitter white"></i>
+                <i class="fab fa-linkedin-in white"></i>
+
               </div>
 
-              <div class="col-md-4 col-sm-4 white bd">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <div class="col-md-4 col-sm-4 white ">
+                <h4 class="sm-title">about freelancer</h4>
+                <p>Freelance is a free to use, MIT licensed Bootstrap theme created by <span><a href="">Start Bootstrap</a></span></p>
+
               </div>
 
             </div>
           </div>
 
-          <div class="end txt-c pd-top20">
-            copyright ecc ecc
+          <div class="end txt-c pd-top20 pdb-50 white">
+            <h5>Copyright <i class="far fa-copyright"></i> Your Website 2019</h5>
           </div>
         </footer>
 
