colori link navbar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
-
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand upc" href="#">start bootstrap</a>
             </div>
@@ -83,10 +84,10 @@
 
               <div class="row">
 
-                <div class="col-md-4 col-sm-6 ">
+                <div class="col-md-4 col-sm-6">
                   <!-- inserisco  img  -->
                   <div class="slide">
-                    <img class="piccola bdr" src="img/cabin.png" alt="">
+                    <a href=""><img class="piccola bdr" src="img/cabin.png" alt=""></a>
 
                   </div>
 
@@ -94,35 +95,35 @@
 
                 <div class="col-md-4 col-sm-6 ">
                   <div class="slide">
-                    <img class="piccola bdr" src="img/cake.png" alt="">
+                    <a href=""><img class="piccola bdr" src="img/cake.png" alt=""></a>
 
                   </div>
                 </div>
 
                 <div class="col-md-4 col-sm-6 ">
                   <div class="slide txt-c">
-                    <img class="piccola bdr" src="img/circus.png" alt="">
+                    <a href=""><img class="piccola bdr" src="img/circus.png" alt=""></a>
                   </div>
                 </div>
 
 
                 <div class="col-md-4  col-sm-6 ">
                   <div class="slide txt-c">
-                    <img class="piccola bdr" src="img/game.png" alt="">
+                    <a href=""><img class="piccola bdr" src="img/game.png" alt=""></a>
                   </div>
 
                 </div>
 
                 <div class="col-md-4  col-sm-6 ">
                   <div class="slide txt-c">
-                    <img class="piccola bdr" src="img/safe.png" alt="">
+                    <a href=""><img class="piccola bdr" src="img/safe.png" alt=""></a>
                   </div>
 
                 </div>
 
                 <div class="col-md-4  col-sm-6 ">
                   <div class="slide txt-c">
-                    <img class="piccola bdr" src="img/submarine.png" alt="">
+                    <a href=""><img class="piccola bdr" src="img/submarine.png" alt=""></a>
                   </div>
 
                 </div>
@@ -200,27 +201,23 @@
                     <div class="form-group">
 
                       <input type="text" class="form-control" id="formGroup1" placeholder="name">
-                    </div>
-
-                    <div class="form-group">
 
                       <input type="email" class="form-control" id="formGroup2" placeholder="email address">
-                    </div>
-
-                    <div class="form-group">
 
                       <input type="number" class="form-control" id="formGroup3" placeholder="phone number">
-                    </div>
-
-                    <div class="form-group">
 
                       <textarea class="form-control" id="exampleFormControlTextarea1" rows="6">message</textarea>
                     </div>
 
                     <button type="button" class="btn btn-success">send</button>
 
-
                   </form>
+
+
+
+
+
+
                 </div>
               </div>
             </div>
