elementi del footer aggiunti

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <div class="center txt-c">
               <!-- qui dentro abbiamo un img+ h1+logo e p-->
-              <img class="smile-boy"src="img/avataaars.svg" alt="">
+              <img class="smile-boy" src="img/avataaars.svg" alt="">
               <h1 class="white title">start bootstrap</h1>
               <div class="divider txt-c">
                 <div class="square"></div>
@@ -241,10 +241,13 @@
 
               <div class="col-md-4 col-sm-4 white ">
                 <h4 class="sm-title">around the web</h4>
-                <i class="fab fa-facebook-f white"></i>
-                <i class="fab fa-google-plus-g white"></i>
-                <i class="fab fa-twitter white"></i>
-                <i class="fab fa-linkedin-in white"></i>
+
+                <div class="social mrg-20">
+                  <span><a href=""><i class="fab fa-facebook-f white mglr-5 pd-10"></i></a></span>
+                  <span><a href=""><i class="fab fa-google-plus-g white mglr-5 pd-10"></i></a></span>
+                  <a href=""><i class="fab fa-twitter white mglr-5 pd-10"></i></a>
+                  <a href=""><i class="fab fa-linkedin-in white mglr-5 pd-10"></i></a>
+                </div>
 
               </div>
 
